--- a/DeusVultOnline/Pages/Login.html
+++ b/DeusVultOnline/Pages/Login.html
@@ -1,20 +1,48 @@
-<h1>Login</h1>
+<div ng-show="!register">
+    <h1>Login</h1>
 
-<form ng-submit="login()" class="form">
-    <div class="col-md-4">
-        <div class="form-group">
-            <input type="text" class="form-control" ng-model="username" placeholder="username" required=""/>
+    <form ng-submit="login()" class="form">
+        <div class="col-md-4">
+            <div class="form-group">
+                <input type="text" class="form-control" ng-model="username" placeholder="username" required="" />
+            </div>
+
+            <div class="form-group">
+                <input type="password" class="form-control" ng-model="password" placeholder="password" required="" />
+            </div>
+
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" ng-click="register = !register">Register</button>
+                <button type="submit" class="btn btn-success">Login</button>
+                <span class="text-danger">{{ error }}</span>
+            </div>
         </div>
+    </form>
+</div>
+<div ng-show="register">
+    <h1>Register</h1>
 
-        <div class="form-group">
-            <input type="password" class="form-control" ng-model="password" placeholder="password" required=""/>
+    <form ng-submit="registerUser()" class="form">
+        <div class="col-md-4">
+            <div class="form-group">
+                <input type="text" class="form-control" ng-model="username" placeholder="username" required=""/>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control" ng-model="email" placeholder="email" required="" />
+            </div>
+
+            <div class="form-group">
+                <input type="password" class="form-control" ng-model="password" placeholder="password" required=""/>
+            </div>
+            <div class="form-group">
+                <input type="password" class="form-control" ng-model="password2" placeholder="repeat password" required="" />
+            </div>
+
+            <div class="form-group">
+                <button class="btn btn-primary" ng-click="register = !register">Cancel</button>
+                <button type="submit" class="btn btn-success">Register</button>
+                <span class="text-danger">{{ error }}</span>
+            </div>
         </div>
-
-        <div ng-if="message.length > 0" class="col-md-12 alert alert-danger">{{message}}</div>
-
-        <div class="form-group">
-            <button type="submit" class="btn btn-success">Login</button>
-            <span class="text-danger">{{ error }}</span>
-        </div>
-    </div>
-</form>
+    </form>
+</div>
