CVO-6 fix redirect after successful register

--- a/DeusVultOnline/Pages/Login.html
+++ b/DeusVultOnline/Pages/Login.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="form-group">
-                <button class="btn btn-primary" ng-click="register = !register">Cancel</button>
+                <button type="button" class="btn btn-primary" ng-click="register = !register">Cancel</button>
                 <button type="submit" class="btn btn-success">Register</button>
                 <span class="text-danger">{{ error }}</span>
             </div>
