Start Emblem, End Character Route

--- a/DeusVultOnline/index.html
+++ b/DeusVultOnline/index.html
@@ -15,7 +15,7 @@
         }
     </style>
 </head>
-<body class="container ng-cloak">
+<body class="ng-cloak">
     <div ng-view></div>
 </body>
 </html>
