--- a/DeusVultOnline/Pages/Home.html
+++ b/DeusVultOnline/Pages/Home.html
@@ -1,3 +1,7 @@
+<svg height="150" width="150">
+    <g emblem emblem-num="1" backgoundcolor="#eee" color1="#f00" color2="#0f0"/>
+</svg>
+<!--
 
 <svg height="210" width="500" style="background-color: black">
     <polygon points="{{province.polygon}}" class="province" ng-repeat="province in provinces" ng-click="clicked(province)" ng-style="{'fill': province.color}"/>
@@ -8,3 +12,4 @@
         {{ 'Leader' + x.Leader + ', Moral: ' + x.Moral + ' Movement ' + x.Movement + ' MarshallBonus ' + x.MarshallBonus}}
     </li>
 </ul>
+-->
