Add link to character via emblem

--- a/DeusVultOnline/Pages/Home.html
+++ b/DeusVultOnline/Pages/Home.html
@@ -1,6 +1,8 @@
-<svg height="150" width="150">
-    <g emblem emblem-num="1" backgoundcolor="#eee" color1="#f00" color2="#0f0"/>
-</svg>
+<a ng-href="#/character">
+    <svg height="150" width="150">
+        <g emblem emblem-num="1" backgoundcolor="#eee" color1="#f00" color2="#0f0"/>
+    </svg>
+</a>
 <!--
 
 <svg height="210" width="500" style="background-color: black">
